<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LibroStock</string>
    <string name="icono">Ícono</string>
    <string name="listadoLibros">Lista de Libros</string>
    <string name="agregarLibro">Agregar Libro</string>
    <string name="agregar">Agregar</string>
    <string name="agregarAutor" tools:ignore="Typos">Agregar Autor</string>
    <string name="nombreAutor" tools:ignore="Typos">Ingresar Nombre</string>
    <string name="apellidoAutor" tools:ignore="Typos">Ingresar Apellido</string>
    <string name="paisAutor" tools:ignore="Typos">Ingresar País</string>
    <string name="tituloLibro" tools:ignore="Typos">Ingresar Título</string>
    <string name="autorLibro" tools:ignore="Typos">Ingresar Autor</string>
    <string name="generoLibro" tools:ignore="Typos">Ingresar Género</string>
    <string name="buscar" tools:ignore="Typos">Buscar</string>
    <string name="buscar2" tools:ignore="Typos">Buscar…</string>
    <string name="informacion" tools:ignore="Typos">Información</string>
    <string name="reportes" tools:ignore="Typos">Reportes</string>
    <string name="estadisticas" tools:ignore="Typos">Estadísticas</string>
    <string name="salir" tools:ignore="Typos">Salir</string>
    <string name="tituloFL" tools:ignore="Typos">Título</string>
    <string name="autorFL" tools:ignore="Typos">Autor</string>
    <string name="generoFL" tools:ignore="Typos">Género</string>
    <string name="sexo" tools:ignore="Typos">Sexo</string>
    <string name="masculino" tools:ignore="Typos">Masculino</string>
    <string name="femenino" tools:ignore="Typos">Femenino</string>
    <string name="editar" tools:ignore="Typos">Editar</string>
    <string name="eliminar" tools:ignore="Typos">Eliminar</string>
    <string name="sinLibros" tools:ignore="Typos">Sin Libros</string>
    <string name="tituloDetalleLibro">Detalle Libro</string>
    <string name="tituloDetalleAutor">Detalle Autor</string>
    <string name="precaucion">Precaución</string>
    <string name="mensaje">Mensaje</string>
    <string name="pais">País</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>