<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".Fragments.frAgregarAutor">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde">

            <EditText
                android:id="@+id/edtNombreAutorFRAA"
                style="@style/texto"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="25sp"
                android:ems="10"
                android:hint="@string/nombreAutor"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                app:backgroundTint="@color/colorLetra"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/imgLimpiarNombreFRAA"
                style="@style/imagen_boton"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/icono"
                android:visibility="gone"
                app:srcCompat="@drawable/icono_cancelar" />
        </FrameLayout>

        <Space style="@style/espacio2" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde">

            <AutoCompleteTextView
                android:id="@+id/edtPaisAutorFRAA"
                style="@style/texto"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="25sp"
                android:ems="10"
                android:hint="@string/paisAutor"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                app:backgroundTint="@color/colorLetra"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/imgLimpiarPaisFRAA"
                style="@style/imagen_boton"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/icono"
                android:visibility="gone"
                app:srcCompat="@drawable/icono_cancelar" />
        </FrameLayout>

        <Space style="@style/espacio2" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txtSexoFRAA"
                style="@style/texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:text="@string/sexo" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbMasculinoFRAL"
                    style="@style/texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/masculino"
                    android:checked="true"
                    app:buttonTint="@color/colorLetra" />

                <RadioButton
                    android:id="@+id/rbFemeninoFRAL"
                    style="@style/texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/femenino"
                    app:buttonTint="@color/colorLetra" />
            </RadioGroup>
        </TableRow>

    </LinearLayout>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAgregarFRAA"
            android:background="@color/colorBoton"
            style="@style/boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorLetra"
            android:text="@string/agregar" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>