<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLibroFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/selector"
            android:descendantFocusability="blocksDescendants">

            <ImageView
                android:id="@+id/imgLibroFL"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icono_terror"
                android:contentDescription="@string/icono" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:descendantFocusability="blocksDescendants">

                <TextView
                    android:id="@+id/txtTituloFL"
                    style="@style/texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/tituloFL" />

                <TextView
                    android:id="@+id/txtAutorFL"
                    style="@style/texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/autorFL" />

                <TextView
                    android:id="@+id/txtGeneroFL"
                    style="@style/texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/generoFL" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/linea"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLetra" />

</LinearLayout>