<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imgDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/icono_alerta"
                android:contentDescription="@string/icono" />

            <TextView
                android:id="@+id/txtTituloDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/texto"
                android:textSize="30sp"
                android:layout_gravity="center_vertical"
                android:text="@string/precaucion" />
        </TableRow>

        <TextView
            android:id="@+id/txtMensajeDE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/texto"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/mensaje" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btnConfirmarDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/icono_aceptar"
                android:contentDescription="@string/icono"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/btnCancelarDE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/icono_cancelar2"
                android:contentDescription="@string/icono"
                android:scaleType="fitCenter" />
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>